--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -18,9 +18,9 @@
 	html {
 		overflow-y:scroll; overflow-x:hidden;
 		width:100%; background:#000;
-		background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
+		background:url('@{bg-url}/main_top_bg.jpg') no-repeat left top;
 		background-color:#000;
-		background-size:cover;
+		background-size:auto 100%;
 		background-attachment:fixed;
 	}
 	body {.font-kr; word-break:keep-all;}
@@ -90,7 +90,6 @@
 	}
 
 
-@hd_transition:all .3s;
 //uk_logo
 	.uk_logo a {
 		display:inline-block; vertical-align:top;
@@ -120,10 +119,14 @@
 
 
 //uk_header
+	@hd_transition:all .3s;
+	@hd_layer_time:.6s;
+	@hd_layer_timing:cubic-bezier(0.645, 0.045, 0.355, 1);
+
 	.uk_header {
 		position:fixed; left:0; top:0; right:0; z-index:9;
 		height:@hdHeight;
-		transition:background-color .4s;
+		transition:background-color .4s/*, transform @hd_layer_time*/;
 		&:before, .hd_progress {
 			overflow:hidden;
 			position:absolute; left:0; top:@hdHeight; opacity:0;
@@ -162,16 +165,15 @@
 			}
 			.aside {
 				.clear;
+				article {.lft; vertical-align:top;}
 				button {
-					.lft; position:relative; cursor:pointer;
+					position:relative; cursor:pointer;
 					width:@size; height:@size; margin-left:20px;
 					i {
 						font-size:0; transition:@hd_transition;
 						&:before, &:after {transition:@hd_transition;}
 					}
 				}
-				.layer_box {display:none;}
-
 				.search_btn {
 					i {
 						@size:28px;
@@ -199,6 +201,7 @@
 						&:before, &:after {
 							position:absolute; left:0;
 							width:100%; height:100%; background:#fff;
+							transition:background-color .15s @delay;
 							content:"";
 						}
 						&:before {top:@tb;}
@@ -405,11 +408,141 @@
 		}
 		.sub_page .uk_header {
 			.uk_logo:before {
-				right:-30px; top:0px;
+				right:-30px; top:0;
 				height:@hdHeightMb;
 			}
 		}
 	}
+
+	.hd_layer_box {display:none;}
+
+	//hd_sitemap common
+	.hd_sitemap {
+		* {color:#fff;}
+		.sitemap_area {
+			overflow-x:hidden; overflow-y:hidden; opacity:0;
+			display:block;
+			position:fixed; left:-9999px; top:-9999px; z-index:99998;
+			width:100%; height:100%; padding-bottom:@pc_padding;
+			background:rgba(0,0,0,.85);
+			-webkit-overflow-scrolling:touch;
+		}
+		.sitemap_in {
+			h4 {
+				line-height:@hdHeight;
+				.font-tit; font-size:50px; color:#fff; font-weight:normal;
+				text-shadow:
+						0 0 30px rgba(0,0,0,.9),
+						0 0 30px rgba(0,0,0,.9),
+						0 0 30px rgba(0,0,0,.9);
+			}
+			ul li {line-height:18px; font-size:14px;}
+			ul > li li {padding-left:20px;
+			}
+		}
+	}
+	.hd_sitemap_on {
+		.hd_sitemap {
+			.ly_btn {z-index:99999;}
+			.sitemap_area {
+				overflow-y:scroll; opacity:1;
+				left:0; top:0;
+			}
+		}
+		//서브페이지에서 사이트맵 버튼 색상 변경
+		&.sub_page .uk_header {
+			.nav_area {
+				.aside {
+					.sitemap_btn {
+						i {
+							background-color:#fff;
+							&:before, &:after {background-color:#fff;}
+						}
+						&.active i {background-color:transparent;}
+					}
+				}
+			}
+		}
+	}
+
+	//hd_sitemap desktop action
+	.desktop .hd_sitemap {
+		.sitemap_area {
+			transition:left 0s @hd_layer_time, top 0s @hd_layer_time, opacity @hd_layer_time;
+			transition-timing-function:@hd_layer_timing;
+		}
+		.sitemap_in {
+			transform:scale(1.5,1.5);
+			transition:transform @hd_layer_time @hd_layer_timing;
+		}
+	}
+	.desktop.hd_sitemap_on {
+		.hd_sitemap {
+			.sitemap_area {
+				transition:left 0s, top 0s, opacity @hd_layer_time;
+				transition-timing-function:@hd_layer_timing;
+			}
+			.sitemap_in {transform:scale(1,1);}
+		}
+		.zoom_wrap {transform:scale(.9,.9); opacity:.8; filter:blur(5px);}
+	}
+
+	//hd_sitemap device action
+	.device .hd_sitemap {
+		.sitemap_area {
+			transform:scale(1.5,1.5);
+			background:rgba(0,0,0,.7);
+			transition:
+					left 0s @hd_layer_time,
+					top 0s @hd_layer_time,
+					transform @hd_layer_time,
+					opacity @hd_layer_time;
+			transition-timing-function:@hd_layer_timing;
+		}
+	}
+	.device.hd_sitemap_on {
+		.hd_sitemap {
+			.sitemap_area {
+				transform:scale(1,1);
+				transition:
+						left 0s, top 0s,
+						opacity @hd_layer_time,
+						transform @hd_layer_time;
+				transition-timing-function:@hd_layer_timing;
+			}
+		}
+		.zoom_wrap {transform:scale(1,1); opacity:.8; filter:blur(2px);}
+	}
+
+	//desktop 환경에서 세로 스크롤 대응
+	.desktop.hd_sitemap_on {
+		body {margin-right:17px;}
+		.uk_header {right:17px;}
+		&.opera {margin-right:15px;}
+		&.opera .uk_header {right:15px;}
+		&.edge {margin-right:16px;}
+		&.edge .uk_header {right:16px;}
+	}
+	.zoom_wrap {
+		transition:
+				transform @hd_layer_time - .2s,
+				opacity @hd_layer_time - .2s,
+				filter @hd_layer_time - .2s;
+		transition-timing-function:@hd_layer_timing;
+	}
+
+
+
+	//작업용(사이트맵 완료 후 삭제)
+	/*
+	html {overflow:hidden;}
+	.hd_sitemap {
+		.sitemap_area {left:0 !important; top:0 !important; opacity:1 !important; transform:scale(1,1) !important; overflow-y:scroll !important;}
+		.sitemap_in {transform:scale(1,1) !important;}
+	}
+	*/
+	//작업용(사이트맵 완료 후 삭제)
+
 
 
 //uk_footer
@@ -517,6 +650,9 @@
 			&:before {left:15px; right:15px;}
 		}
 	}
+
+
+//uk_container
 
 
 
@@ -1138,9 +1274,9 @@
 
 
 //sub ----------------------------------------------------------------------------------------//
-	.sub_page {}
-	.sub_page .uk_container {padding-top:@hdHeight; background:#fff;}
+	.sub_page {background:#eee;}
+	.sub_page .uk_container {margin-top:@hdHeight; background:#fff;}
 	.sub_page .uk_footer {background:#000;}
 	@media(max-width:@screen-sm-max){
-		.sub_page {padding-top:@hdHeightMb;}
+		.sub_page .uk_container {margin-top:@hdHeightMb;}
 	}
