--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -1537,9 +1537,9 @@ html {
   overflow-x: hidden;
   width: 100%;
   background: #000;
-  background: url('../img/main_top_bg.jpg') no-repeat center top;
+  background: url('../img/main_top_bg.jpg') no-repeat left top;
   background-color: #000;
-  background-size: cover;
+  background-size: auto 100%;
   background-attachment: fixed;
 }
 body {
@@ -1715,7 +1715,7 @@ body {
   right: 0;
   z-index: 9;
   height: 110px;
-  transition: background-color 0.4s;
+  transition: background-color 0.4s /*, transform @hd_layer_time*/;
 }
 .uk_header:before,
 .uk_header .hd_progress {
@@ -1808,8 +1808,11 @@ body {
   clear: both;
   content: "";
 }
-.uk_header .nav_area .aside button {
+.uk_header .nav_area .aside article {
   float: left;
+  vertical-align: top;
+}
+.uk_header .nav_area .aside button {
   position: relative;
   cursor: pointer;
   width: 60px;
@@ -1823,9 +1826,6 @@ body {
 .uk_header .nav_area .aside button i:before,
 .uk_header .nav_area .aside button i:after {
   transition: all 0.3s;
-}
-.uk_header .nav_area .aside .layer_box {
-  display: none;
 }
 .uk_header .nav_area .aside .search_btn i {
   position: absolute;
@@ -1865,6 +1865,7 @@ body {
   width: 100%;
   height: 100%;
   background: #fff;
+  transition: background-color 0.15s 0s;
   content: "";
 }
 .uk_header .nav_area .aside .sitemap_btn i:before {
@@ -2434,10 +2435,130 @@ body {
   }
   .sub_page .uk_header .uk_logo:before {
     right: -30px;
-    top: 0px;
+    top: 0;
     height: 60px;
   }
 }
+.hd_layer_box {
+  display: none;
+}
+.hd_sitemap * {
+  color: #fff;
+}
+.hd_sitemap .sitemap_area {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  opacity: 0;
+  display: block;
+  position: fixed;
+  left: -9999px;
+  top: -9999px;
+  z-index: 99998;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 50px;
+  background: rgba(0, 0, 0, 0.85);
+  -webkit-overflow-scrolling: touch;
+}
+.hd_sitemap .sitemap_in h4 {
+  line-height: 110px;
+  font-family: 'Anton', 'Malgun Gothic', 'Dotum', sans-serif;
+  font-size: 50px;
+  color: #fff;
+  font-weight: normal;
+  text-shadow: 0 0 30px rgba(0, 0, 0, 0.9), 0 0 30px rgba(0, 0, 0, 0.9), 0 0 30px rgba(0, 0, 0, 0.9);
+}
+.hd_sitemap .sitemap_in ul li {
+  line-height: 18px;
+  font-size: 14px;
+}
+.hd_sitemap .sitemap_in ul > li li {
+  padding-left: 20px;
+}
+.hd_sitemap_on .hd_sitemap .ly_btn {
+  z-index: 99999;
+}
+.hd_sitemap_on .hd_sitemap .sitemap_area {
+  overflow-y: scroll;
+  opacity: 1;
+  left: 0;
+  top: 0;
+}
+.hd_sitemap_on.sub_page .uk_header .nav_area .aside .sitemap_btn i {
+  background-color: #fff;
+}
+.hd_sitemap_on.sub_page .uk_header .nav_area .aside .sitemap_btn i:before,
+.hd_sitemap_on.sub_page .uk_header .nav_area .aside .sitemap_btn i:after {
+  background-color: #fff;
+}
+.hd_sitemap_on.sub_page .uk_header .nav_area .aside .sitemap_btn.active i {
+  background-color: transparent;
+}
+.desktop .hd_sitemap .sitemap_area {
+  transition: left 0s 0.6s, top 0s 0.6s, opacity 0.6s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.desktop .hd_sitemap .sitemap_in {
+  transform: scale(1.5, 1.5);
+  transition: transform 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.desktop.hd_sitemap_on .hd_sitemap .sitemap_area {
+  transition: left 0s, top 0s, opacity 0.6s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.desktop.hd_sitemap_on .hd_sitemap .sitemap_in {
+  transform: scale(1, 1);
+}
+.desktop.hd_sitemap_on .zoom_wrap {
+  transform: scale(0.9, 0.9);
+  opacity: .8;
+  filter: blur(5px);
+}
+.device .hd_sitemap .sitemap_area {
+  transform: scale(1.5, 1.5);
+  background: rgba(0, 0, 0, 0.7);
+  transition: left 0s 0.6s, top 0s 0.6s, transform 0.6s, opacity 0.6s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.device.hd_sitemap_on .hd_sitemap .sitemap_area {
+  transform: scale(1, 1);
+  transition: left 0s, top 0s, opacity 0.6s, transform 0.6s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.device.hd_sitemap_on .zoom_wrap {
+  transform: scale(1, 1);
+  opacity: .8;
+  filter: blur(2px);
+}
+.desktop.hd_sitemap_on body {
+  margin-right: 17px;
+}
+.desktop.hd_sitemap_on .uk_header {
+  right: 17px;
+}
+.desktop.hd_sitemap_on.opera {
+  margin-right: 15px;
+}
+.desktop.hd_sitemap_on.opera .uk_header {
+  right: 15px;
+}
+.desktop.hd_sitemap_on.edge {
+  margin-right: 16px;
+}
+.desktop.hd_sitemap_on.edge .uk_header {
+  right: 16px;
+}
+.zoom_wrap {
+  transition: transform 0.4s, opacity 0.4s, filter 0.4s;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+/*
+	html {overflow:hidden;}
+	.hd_sitemap {
+		.sitemap_area {left:0 !important; top:0 !important; opacity:1 !important; transform:scale(1,1) !important; overflow-y:scroll !important;}
+		.sitemap_in {transform:scale(1,1) !important;}
+	}
+	*/
 .uk_footer {
   position: relative;
   z-index: 8;
@@ -3712,16 +3833,19 @@ body {
     opacity: .6;
   }
 }
+.sub_page {
+  background: #eee;
+}
 .sub_page .uk_container {
-  padding-top: 110px;
+  margin-top: 110px;
   background: #fff;
 }
 .sub_page .uk_footer {
   background: #000;
 }
 @media (max-width: 767px) {
-  .sub_page {
-    padding-top: 60px;
+  .sub_page .uk_container {
+    margin-top: 60px;
   }
 }
 /*# sourceMappingURL=uk.css.map */
